--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,12 @@ CMakeUserPresets.json
 # External projects
 *-prefix/
 
+### Folder ###
+#
+#
+
+build32/windeployqt
+
 ### QtCreator ###
 # gitignore for Qt Creator like IDE for pure C/C++ project without Qt
 #
