--- a/build32/qt-compression.vcxproj.filters
+++ b/build32/qt-compression.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="C:\Users\banda\Documents\Работа\qt-compression\src\SClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Users\banda\Documents\Работа\qt-compression\src\SubtractionDecorator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Users\banda\Documents\Работа\qt-compression\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -37,6 +40,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C:\Users\banda\Documents\Работа\qt-compression\include\SClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\banda\Documents\Работа\qt-compression\include\SubtractionDecorator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C:\Users\banda\Documents\Работа\qt-compression\include\resource.h">
